Alt Tags geändert, Keywords geändert

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Gitarrenunterricht / Gitarrenlehrer in Hamburg Eimsbüttel
 content_description: Dipl. Gitarrenlehrer Bernhard Welling informiert über seinen Gitarrenunterricht in Hamburg Eimsbüttel
 robot_tags: index,follow
-meta_keywords: gitarrenunterricht eimsbüttel, gitarrenlehrer eimsbüttel, gitarrenunterricht hamburg, gitarrenlehrer hamburg, eimsbüttel, gitarrenschule, hamburg
+meta_keywords: gitarrenunterricht in eimsbüttel, gitarrenlehrer eimsbüttel, gitarrenunterricht für hamburg, gitarrenlehrer hamburg, eimsbüttel, gitarrenlehrer-fuer-gitarrenunterricht-in-hamburg-eimsbuettel, hamburg
 meta_author: Bernhard Welling
 ---
 
@@ -23,7 +23,7 @@ meta_author: Bernhard Welling
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-3 center-text">
-            <img class="img-circle profilimage" src="assets\images\gitarrenlehrer-fuer-gitarrenunterricht-in-hamburg-eimsbuettel.jpg" alt="Profilfoto von Bernhard Welling">
+            <img class="img-circle profilimage" src="assets\images\gitarrenlehrer-fuer-gitarrenunterricht-in-hamburg-eimsbuettel.jpg" alt="Profilfoto von Gitarrenlehrer Bernhard Welling">
         </div>
         <div class="col-md-7">
             <div id="banner-home">
