--- a/impressum.html
+++ b/impressum.html
@@ -3,7 +3,7 @@ layout: default
 title: Gitarrenlehrer in Hamburg Eimsbüttel / Impressum
 content_description: Verantwortlich für den Inhalt der Seite gitarrenunterrichtineimsbuettel.de, ist der Dipl. Gitarrenlehrer Bernhard Welling
 robot_tags: index,follow
-meta_keywords: gitarrenunterricht, eimsbüttel, gitarrenlehrer, hamburg, gitarrenschule, stellingen
+meta_keywords: gitarrenunterricht, eimsbuettel, gitarrenlehrer, hamburg, gitarrenschule, stellingen, niendorf, altona
 meta_author: Bernhard Welling
 ---
 
