--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Gitarrenunterricht / Gitarrenlehrer in Hamburg Eimsbüttel
-content_description: Dipl. Gitarrenlehrer Bernhard Welling informiert über seinen Gitarrenunterricht in Hamburg Eimsbüttel
+title: Gitarrenunterricht / Gitarrenlehrer in Hamburg Eimsbüttel | Online-Gitarrenunterricht
+content_description: Dipl. Gitarrenlehrer Bernhard Welling informiert über seinen Gitarrenunterricht in Hamburg Eimsbüttel. Zur Zeit Online-Gitarrenunterricht
 robot_tags: index,follow
 meta_keywords: gitarrenunterricht in eimsbüttel, gitarrenlehrer eimsbüttel, gitarrenunterricht für hamburg, gitarrenlehrer hamburg, eimsbüttel, gitarrenlehrer-fuer-gitarrenunterricht-in-hamburg-eimsbuettel, hamburg
 meta_author: Bernhard Welling
