--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Gitarrenunterricht / Gitarrenlehrer in Hamburg Eimsbüttel
-content_description: Dipl. Gitarrenlehrer Bernhard Welling informiert über seinen Gitarrenunterricht in Hamburg Eimsbüttel. Zurzeit biete ich auch Online-Gitarrenunterricht an!
+content_description: Dipl. Gitarrenlehrer Bernhard Welling informiert über seinen Gitarrenunterricht in Hamburg Eimsbüttel. Zurzeit Gitarrenunterricht online, oder im Studio!
 robot_tags: index,follow
 meta_keywords: gitarrenunterricht in eimsbüttel, gitarrenlehrer eimsbüttel, gitarrenunterricht für hamburg, gitarrenlehrer hamburg, eimsbüttel, gitarrenlehrer-fuer-gitarrenunterricht-in-hamburg-eimsbuettel, hamburg
 meta_author: Bernhard Welling
