matomo fix height

--- a/impressum.html
+++ b/impressum.html
@@ -35,7 +35,8 @@ Die durch den Cookie erzeugten Nutzungsinformationen (einschlie√ülich Ihrer gek√
 
 
 <iframe
-style="border: 0; height: 200px; width: 600px;"
+style="border: 0; height: 300px; width: 100%; max-width: 100%;"
+onload="this.style.height = this.contentWindow.document.documentElement.scrollHeight + 'px'"
 src="https://www.gitarrenunterrichtineimsbuettel.de/Analytics/index.php?module=CoreAdminHome&action=optOut&language=de&backgroundColor=&fontColor=&fontSize=&fontFamily="
 ></iframe>
 </div>
